--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Know Your Location Weather - ForecastHub">
   <title>Know Your Location Weather - ForecastHub</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utility.css">
