--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="flex gap-5">
         <span>Pressure :</span>
-        <span><span id="pressure"></span></span>
+        <span><span id="pressure"></span>mb</span>
       </div>
     </div>
 
