--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Know Your Location Weather - ForecastHub">
-  <title>Know Your Location Weather - ForecastHub</title>
+  <meta name="description" content="Stay ahead with real-time, accurate weather forecasts for your city! Get hourly updates, 5-day forecasts, live radar, severe weather alerts, and tips for outdoor activities. Trusted by millions, your go-to source for weather insights.">
+  <title>ForecastHub - Know Your Location Weather</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utility.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <h1 class="p-15 flex center text-green" style="background-color: hotpink;">Wind</h1>
+    <h1 class="p-15 flex center text-green" style="background-color: rgb(56, 37, 37); color: rgb(4, 255, 0);">Wind</h1>
     <div class="flex gap-80 center Font-size-25 wrap p-5 bg-unique2">
       <div class="flex gap-5">
         <span>Degree : </span>
@@ -74,6 +74,11 @@
       </div>
     </div>
   </main>
+
+  <h1 class="p-5 Font-size-23 center flex">Weather Forecast Of 5 Days</h1>
+  <div id="fiveDay"></div>
+  <div id="weatherResult"></div>
+  
   <script src="script.js"></script>
 </body>
 
