--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
         </div>
       </div>
     </div>
-    <h2 class="p-5 Font-size-23 center flex border inline-flex">Weather Forecast Of 5 Days</h2>
-    <div id="weatherResult" class="border"></div>
+    <div class="border">
+      <h2 class="p-5 Font-size-23 center flex border inline-flex">Weather Forecast Of 5 Days</h2>
+      <div id="weatherResult">
+      </div>
+    </div>
 
   </main>
   <script type="module" src="script.js"></script>
