--- a/index.html
+++ b/index.html
@@ -40,50 +40,49 @@
 
   <!-- Main Body -->
   <main id="main">
-    <h2 class="inline-flex border w-180 flex center">
+    <h2 class="inline-flex w-180 flex center">
       <span id="location">Mumbai</span>,
       <span id="area">IN</span>
     </h2>
-    <div class="flex coulmn text-center h-300">
-      <div id="weatherImage"></div>
-      <div class="gap-5 flex Font-size-23 m-15 border">
+    <div id="weatherImage"></div>
+    <div class="flex coulmn text-center">
+      <div class="gap-5 flex Font-size-23 m-15">
         <span>Description :</span><span id="conditionWeather"></span>
       </div>
-      <div class="flex Font-size-25 bold border"> <span>Temperature : </span> <span id="temp"></span>&deg;C</div>
-    </div>
-    <div class="flex gap-10 center Font-size-25 wrap p-5 m-10"
-      style="margin-left: 0; margin-right: 0; margin-bottom: 0;">
-      <div class="flex gap-5 border">
-        <span>Humidity : </span>
-        <span id="humidity"></span>%
-      </div>
-      <div class="flex gap-5 border">
-        <span>
-          Feels Like :</span>
-        <span><span id="feels_like"></span>&deg;C</span>
-      </div>
-      <div class="flex gap-5 border">
-        <span>Max-Temperature :</span>
-        <span><span id="maxTemp"></span>&deg;C</span>
-      </div>
-      <div class="flex gap-5 border">
-        <span>Min-Temperature :</span>
-        <span><span id="minTemp"></span>&deg;C</span>
-      </div>
-      <div class="flex gap-5 border text-center">
-        <span>Pressure :</span>
-        <span><span id="pressure"></span>mb</span>
-      </div>
-      <div class="flex center Font-size-20 wrap p-5 border">
-        <h3 class="p-15 flex center">Wind</h3>
-        <div class="flex gap-5 coulmn">
-          <div class="flex gap-5">
-            <span>Degree : </span>
-            <span id="degree"></span>&deg;
-          </div>
-          <div class="flex gap-5">
-            <span>Speed : </span>
-            <span id="speed"></span>km/h
+      <div class="flex Font-size-25 bold"> <span>Temperature : </span> <span id="temp"></span>&deg;C</div>
+      <div class="flex gap-20 center Font-size-25 wrap text-center p-5 m-10">
+        <div class="flex gap-5">
+          <span>Humidity : </span>
+          <span id="humidity"></span>%
+        </div>
+        <div class="flex gap-5">
+          <span>
+            Feels Like :</span>
+          <span><span id="feels_like"></span>&deg;C</span>
+        </div>
+        <div class="flex gap-5">
+          <span>Max-Temperature :</span>
+          <span><span id="maxTemp"></span>&deg;C</span>
+        </div>
+        <div class="flex gap-5">
+          <span>Min-Temperature :</span>
+          <span><span id="minTemp"></span>&deg;C</span>
+        </div>
+        <div class="flex gap-5 text-center">
+          <span>Pressure :</span>
+          <span><span id="pressure"></span>mb</span>
+        </div>
+        <div class="flex center Font-size-20 wrap p-5">
+          <h3 class="p-15 flex center">Wind</h3>
+          <div class="flex gap-5 coulmn">
+            <div class="flex gap-5">
+              <span>Degree : </span>
+              <span id="degree"></span>&deg;
+            </div>
+            <div class="flex gap-5">
+              <span>Speed : </span>
+              <span id="speed"></span>km/h
+            </div>
           </div>
         </div>
       </div>
